fix(#11): align title and description cases page

--- a/src/components/sections/hero/hero.module.css
+++ b/src/components/sections/hero/hero.module.css
@@ -59,7 +59,7 @@
   }
 }
 
-@media (width <= 768px) {
+@media (width < 768px) {
   .hero_content {
     row-gap: 30px;
     padding-inline: 16px;
